crates/formatter/tests/snapshots/snapshots__coder__migrations__000160_provisioner_job_status.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table provisioner_jobs drop column job_status;
drop type provisioner_job_status;
